name:            Coroutine
version:         0.2.0.0
copyright:       (c) 2008 Ryan Ingram
license:         BSD3
license-file:    LICENSE
author:          Ryan Ingram <ryani.spam@gmail.com>
maintainer:      Ryan Ingram <ryani.spam@gmail.com>
category:        Control
synopsis:        Type-safe coroutines using lightweight session types.
description:     This package provides a pure interface for composing
                 independent functions that have a well-defined
                 communication protocol.
                 It is loosely based on Jesse Tov's Haskell Symposium 2008
                 paper "Haskell Session Types with (almost) no class"
                 (http://www.ccs.neu.edu/home/tov/pubs/session08.html)
stability:       experimental
build-type:      Simple
cabal-version:   >= 1.2.3

library
  exposed-modules:
    Control.Coroutine,
    Control.Coroutine.Monadic,
    Control.Monad.Indexed
  extensions:
    NoImplicitPrelude,
    EmptyDataDecls,
    TypeFamilies,
    RankNTypes,
    TypeOperators,
    ExistentialQuantification
  build-depends:
    base >= 4.8 && < 4.10
    , transformers >= 0.4.2 && < 0.6
